# adaptiSeq

./: .gitignore  404.html  AGENTS.md  BENCHMARK.md  CHANGES_FROM_ISEQ.md  CITATION.cff  COLAB_TESTING.md  EXPERIMENT_PLAN_adaptiseq.md  HANDOFF.md  LICENSE  MANIFEST.in  NOTES.md  PART4_PLAN.md  PART5_PLAN.md  PART6_PLAN.md  PART7_PLAN.md  README.md  adaptiSeq_Colab_Quickstart.ipynb  adaptiSeq_part1_python_port.md  adaptiSeq_part2_segmented_engine.md  adaptiSeq_part3_adaptive_and_batch.md  adaptiseq_codex_report.md  adaptiseq_codex_verdict_2026-06-15.md  environment.yml  iSeq.yml  index.html  mkdocs.yml  pyproject.toml  sample_expanse_code.sh  sitemap.xml
.github/workflows/: ci.yml  docs.yml
ADAPTIVE_CONTROLLER/: index.html
adaptiseq/: __init__.py  __main__.py  _async.py  accession.py  aspera.py  batch.py  cli.py  console.py  convert.py  core.py  errors.py  integrity.py  logs.py  merge.py  metadata.py  net.py  options.py  preflight.py  progress.py  ratelimits.py  resolve.py  routing.py
adaptiseq/assets/: README.md
adaptiseq/engine/: __init__.py  classic.py  ftp.py  gate.py  optimize.py  ratelimit.py  seam.py  segmented.py  segmentlog.py  throughput.py
analysis_fabric_vs_expanse/: ANALYSIS.md
bench/: _run_all.sh  _run_one.py  benchmark.py  benchmark_batch.sh  colab_acceptance.sh  results_batch.tsv  setup_edgeturbo.sh  setup_real_ascp.sh  subset_small.txt
bench/e10/: aggregate_e10.py  e10_expanse.sbatch  etiquette_probe.py  resolve_bench.py  run_e10.sh  run_fabric.sh
bench/e3/: aggregate.py  aseq_run.py  compare_machines.py  e3_expanse.sbatch  e3_lib.sh  make_datasets.py  run_e3.sh  sample_concurrency.py  setup_env.sh  smoke_phaseb.sh  status.sh  submit_e3.sh  verify_output.py
bench/e5/: aggregate_e5.py  aspera_run.py  e5_expanse.sbatch  e5_lib.sh  run_e5.sh  run_fabric.sh
bench/e7/: aggregate_e7.py  e7_expanse.sbatch  e7_lib.sh  e7_origin.py  engine_probe.py  resume_probe.py  run_e7.sh  run_fabric.sh
bench/e8/: aggregate_e8.py  e8_expanse.sbatch  profile_run.py  run_e8.sh
bench/inputs/: accessions_large_PRJNA251383.txt  accessions_medium_PRJNA353374.txt  accessions_small_PRJNA916347.txt  colab_aspera_ena.txt  colab_batch_mixed.txt
datasets/: D0_resume_PRJNA916347.manifest  D0_resume_PRJNA916347.txt  D1_threefile_PRJNA916347.manifest  D1_threefile_PRJNA916347.txt  D2_subset_PRJNA762469.txt  D3_seg_PRJNA540705.manifest  D4_mixed.txt  E10_ena_PRJNA916347.txt  E5_aspera_PRJNA916347.manifest  E5_aspera_PRJNA916347.txt
docs/: ADAPTIVE_CONTROLLER.md  EXPERIMENT_PLAN.md  EXPERIMENT_PLAN_E10.md  EXPERIMENT_PLAN_E3.md  EXPERIMENT_PLAN_E5.md  EXPERIMENT_PLAN_E7.md  EXPERIMENT_PLAN_E8.md  README.md  examples.md  faq.md  installation.md  methods.md  repository-organization-plan.md
docs/assets/: extra.css
docs/img/: README.md
docs/testing/: test-cases.md  test-results.csv  test-results.md  test-results.xlsx
docs/usage/: README.md  aspera.md  batch.md  download.md  merge.md  metadata.md  python-api.md
e10_results_fabric/: FINDINGS.md  e10_etiquette.tsv  e10_resolve.tsv  e10_summary.txt
e3_results/: e3_results.tsv
e3_results/figs/: e3_summary_3a.csv  e3_summary_3b.csv  e3_summary_3c.csv  e3_summary_3d.csv  e3_summary_3r.csv  e3_summary_3s.csv
e3_results/logs/: conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j20_rep1.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j20_rep2.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j20_rep3.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j20_rep4.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j20_rep5.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j40_rep1.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j40_rep2.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j40_rep3.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j40_rep4.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-adaptive-j40_rep5.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j20_rep1.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j20_rep2.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j20_rep3.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j20_rep4.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j20_rep5.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j40_rep1.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j40_rep2.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j40_rep3.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j40_rep4.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-climb-j40_rep5.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-fixed-j20_rep1.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-fixed-j20_rep2.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-fixed-j20_rep3.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-fixed-j20_rep4.tsv  conc_3a_D1_fair_PRJNA916347_adaptiseq-fixed-j20_rep5.tsv  (+348 more)
e3_results_expanse/: link_probe.txt
e3_results_prelim_20260718/: e3_results.tsv
e5_results_fabric/: FINDINGS.md  e5_results.tsv
e7_results_fabric/: FINDINGS.md  e7_engine.tsv  e7_engine_raw.tsv.bak  e7_results.tsv  e7_results_raw.tsv.bak  e7_resume.tsv
e8_results_expanse/: COMPARISON_vs_fabric.md  FINDINGS.md  e8_expanse.sbatch  e8_results.tsv  run_fabric.sh  slurm_e8_52340455.err  slurm_e8_52340455.out  summary.txt  versions.txt
e8_results_fabric/: FINDINGS.md  e8_results.tsv  e8_results_firstrun.tsv.bak
examples/: index.html
exp3_expanse/: e3_results.tsv  versions.txt
exp_logs/e3_52191926/: versions.txt  (+2 more)
faq/: index.html
installation/: index.html
methods/: index.html
search/: search_index.json
sysbench/: README.md  RESULTS.sample.md  envinfo.py  phases.py  plot.py  report.py  run_bench.py  sampler.py
tests/: conftest.py  harness.py  servers.py  test_accession.py  test_api_drift.py  test_aspera.py  test_aspera_live.py  test_async_loop.py  test_batch.py  test_classic_engine.py  test_cli.py  test_differential.py  test_ftp_segmented.py  test_logs_integrity.py  test_merge.py  test_metadata_parse.py  test_meter_gate.py  test_optimize.py  test_phaseb_present.py  test_preflight_lazy.py  test_progress.py  test_resolution.py  test_routing.py  test_segmented.py  test_segmented_finalize.py  test_segmented_live.py
usage/: index.html
(+238 files in other folders)
