[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptiseq"
version = "0.1.0"
description = "adaptiSeq: a tested, importable Python port of the iseq sequencing-data downloader (Part 1: classic engine, behaviour-preserving)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "adaptiSeq" }]
keywords = ["bioinformatics", "sequencing", "SRA", "ENA", "GSA", "download"]

# Metadata bytes are pulled by `wget` (shelled out, exactly as iseq does) for
# byte-for-byte parity. Part 2 adds the async segmented HTTP(S)/FTP engine, which
# requires aiohttp + aioftp at runtime. `openpyxl` parses GSA XLSX in the library
# API (the XLSX file itself is fetched verbatim by wget) — an optional extra.
dependencies = [
    "aiohttp>=3.8",
    "aioftp>=0.21",
]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.0"]
test = ["pytest>=7.0", "openpyxl>=3.0"]

[project.scripts]
adaptiseq = "adaptiseq.cli:main"

[project.urls]
Homepage = "https://github.com/swargo98/adaptiFetch"
Upstream = "https://github.com/BioOmics/iSeq"

[tool.setuptools.packages.find]
include = ["adaptiseq*"]

[tool.setuptools.package-data]
adaptiseq = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Offline CI can set ADAPTISEQ_NO_NETWORK=1 to force live tests to skip; the
# fixture-mode differential tests never skip and cover parity offline.
