[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptiseq"
dynamic = ["version"]
description = "Fast, importable downloader for public sequencing data (GSA/SRA/ENA/DDBJ/GEO) with a segmented, resumable, self-tuning batch engine."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "swargo98" }]
keywords = [
    "bioinformatics",
    "sequencing",
    "SRA",
    "ENA",
    "GSA",
    "DDBJ",
    "GEO",
    "download",
    "fastq",
    "aspera",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

# Metadata bytes are pulled by `wget` (shelled out, exactly as iseq does) for
# byte-for-byte parity. Part 2 adds the async segmented HTTP(S)/FTP engine, which
# requires aiohttp + aioftp at runtime. `openpyxl` parses GSA XLSX in the library
# API (the XLSX file itself is fetched verbatim by wget) — an optional extra.
dependencies = [
    "aiohttp>=3.8",
    "aioftp>=0.21",
    "numpy>=1.21",
]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.0"]
test = ["pytest>=7.0", "openpyxl>=3.0"]

[project.scripts]
adaptiseq = "adaptiseq.cli:main"

[project.urls]
Homepage = "https://github.com/swargo98/adaptiSeq"
Repository = "https://github.com/swargo98/adaptiSeq"
Issues = "https://github.com/swargo98/adaptiSeq/issues"
Upstream = "https://github.com/BioOmics/iSeq"

[tool.setuptools.dynamic]
version = { attr = "adaptiseq.__version__" }

[tool.setuptools.packages.find]
include = ["adaptiseq*"]

[tool.setuptools.package-data]
adaptiseq = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Offline CI can set ADAPTISEQ_NO_NETWORK=1 to force live tests to skip; the
# fixture-mode differential tests never skip and cover parity offline.
