[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptiseq"
dynamic = ["version"]
description = "Fast, importable downloader for public sequencing data (GSA/SRA/ENA/DDBJ/GEO) with a segmented, resumable, self-tuning batch engine."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "swargo98" }]
keywords = [
    "bioinformatics",
    "sequencing",
    "SRA",
    "ENA",
    "GSA",
    "DDBJ",
    "GEO",
    "download",
    "fastq",
    "aspera",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

# Metadata bytes are pulled by `wget` (shelled out), so `requests` is not a
# runtime dependency. The async segmented HTTP(S)/FTP engine requires aiohttp +
# aioftp at runtime. `openpyxl` parses GSA XLSX in the library API (the XLSX file
# itself is fetched verbatim by wget) — an optional extra.
dependencies = [
    "aiohttp>=3.8",
    "aioftp>=0.21",
    "numpy>=1.21",
]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.0"]
# `psutil` is imported by the sysbench benchmark harness (sysbench/tests run in
# CI); it is not part of the shipped adaptiseq package, so it lives here.
test = ["pytest>=7.0", "openpyxl>=3.0", "psutil>=5.9"]

[project.scripts]
adaptiseq = "adaptiseq.cli:main"

[project.urls]
Homepage = "https://github.com/swargo98/adaptiSeq"
Repository = "https://github.com/swargo98/adaptiSeq"
Issues = "https://github.com/swargo98/adaptiSeq/issues"

[tool.setuptools.dynamic]
version = { attr = "adaptiseq.__version__" }

[tool.setuptools.packages.find]
include = ["adaptiseq*"]

[tool.setuptools.package-data]
adaptiseq = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Offline CI can set ADAPTISEQ_NO_NETWORK=1 to force live tests to skip; the
# fixture-mode differential tests never skip and run offline against fixtures.
